testsuite/tests/grammar/invalid_unparser/ambiguous-lists.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Root("example" list+(leaf, ","))
        | list+(leaf)
    ))
    leaf <- or(Identifier(@identifier) | Number(@number))
}
